index.htmlのPWAメタ情報を更新し、Service Workerの登録条件を開発環境に応じて変更しました。また、Firebase設定を環境変数から取得するように修正し、モックモードの実装を強化しました。新たにオンボーディング画面を追加し、ユーザーの基本情報と目標設定を行えるようにしました。ログインおよび登録画面でのナビゲーションを改善し、ユーザー体験を向上させました。

--- a/mockups/データバックアップ画面.html
+++ b/mockups/データバックアップ画面.html
@@ -242,8 +242,8 @@
             // サンプルデータ（実際のアプリではローカルストレージから取得）
             const sampleData = {
                 user: {
-                    username: "demo_user",
-                    nickname: "デモユーザー",
+                    username: "user123",
+                    nickname: "ユーザー",
                     profile: {
                         age: 25,
                         gender: "female",
@@ -296,7 +296,7 @@
         // プレビュー機能
         document.getElementById('previewData').addEventListener('click', function() {
             const sampleData = {
-                user: { username: "demo_user", nickname: "デモユーザー" },
+                user: { username: "user123", nickname: "ユーザー" },
                 records: { weight: 2, meals: 1, exercises: 1 },
                 goals: { targetWeight: 60.0, targetDate: "2024-06-30" }
             };
