--- a/mockups/ホーム画面.html
+++ b/mockups/ホーム画面.html
@@ -815,7 +815,7 @@
             }, 3000);
         }
 
-        // デモ用：空状態の切り替え（実際のアプリでは記録データに基づいて判定）
+        // 空状態の切り替え（実際のアプリでは記録データに基づいて判定）
         // toggleEmptyState(true); // 空状態を表示する場合
 
         // PFC設定モーダル
